--- a/src/UI by Vedernykov/UI by Vedernykov.csproj
+++ b/src/UI by Vedernykov/UI by Vedernykov.csproj
@@ -137,5 +137,8 @@
 	  <EmbeddedResource Update="Views\Mobile\SetFocusOnEntryCompletedView.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </EmbeddedResource>
+	  <EmbeddedResource Update="Views\VersionTrackingView.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </EmbeddedResource>
 	</ItemGroup>
 </Project>
