MarqueeBehavior ver 2.0 added more behavior settings

--- a/src/UI by Vedernykov/UI by Vedernykov.csproj
+++ b/src/UI by Vedernykov/UI by Vedernykov.csproj
@@ -122,6 +122,9 @@
 	  <EmbeddedResource Update="Resources\Styles\DefaultResources.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </EmbeddedResource>
+	  <EmbeddedResource Update="Views\AutoScrollView.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </EmbeddedResource>
 	  <EmbeddedResource Update="Views\Mobile\AboutAppView.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </EmbeddedResource>
