stable work with short text && fixed warning

--- a/src/UI by Vedernykov.iOS/UI by Vedernykov.iOS.csproj
+++ b/src/UI by Vedernykov.iOS/UI by Vedernykov.iOS.csproj
@@ -16,6 +16,11 @@
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
     <ProvisioningType>automatic</ProvisioningType>
   </PropertyGroup>
+  
+  <PropertyGroup>
+	<CodeAnalysisRuleSet>$(SolutionDir)\stylecop\StyleCopRuleSet.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+	
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>portable</DebugType>
