--- a/src/UI by Vedernykov.Android/UI by Vedernykov.Android.csproj
+++ b/src/UI by Vedernykov.Android/UI by Vedernykov.Android.csproj
@@ -24,6 +24,11 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
+  
+  <PropertyGroup>
+	<CodeAnalysisRuleSet>$(SolutionDir)\stylecop\StyleCopRuleSet.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+	
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>portable</DebugType>
