create Charts and Graphs view

--- a/src/UI by Vedernykov/UI by Vedernykov.csproj
+++ b/src/UI by Vedernykov/UI by Vedernykov.csproj
@@ -137,6 +137,9 @@
 	  <EmbeddedResource Update="Views\AutoScrollView.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </EmbeddedResource>
+	  <EmbeddedResource Update="Views\ChartsAndGraphsView.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </EmbeddedResource>
 	  <EmbeddedResource Update="Views\LoginFormView.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </EmbeddedResource>
