--- a/src/UI by Vedernykov/UI by Vedernykov.csproj
+++ b/src/UI by Vedernykov/UI by Vedernykov.csproj
@@ -97,6 +97,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Acr.UserDialogs" Version="7.2.0.564" />
+		<PackageReference Include="Microcharts" Version="0.9.5.9" />
+		<PackageReference Include="Microcharts.Forms" Version="0.9.5.9" />
 		<PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.5.1" />
 		<PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.5.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
